syntax = "proto3";
package secret.emergencybutton.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
// todo verify that pagination isn't needed
// import "cosmos/base/query/v1beta1/pagination.proto";
import "secret/emergencybutton/v1beta1/params.proto";

option go_package = "github.com/scrtlabs/SecretNetwork/x/emergencybutton/types";

// Query defines the gRPC querier service.
service Query {
  // Params defines a gRPC query method that returns the emergencybutton
  // module's parameters.
  rpc Params(ParamsRequest) returns (ParamsResponse) {
    option (google.api.http).get = "/emergencybutton/v1beta1/params";
  }
}

// ParamsRequest is the request type for the Query/Params RPC method.
message ParamsRequest {}

// ParamsResponse is the response type for the Query/Params RPC method.
message ParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}
